--- a/EvolutionaryAlgorithm/EvolutionaryAlgorithm/EvolutionaryAlgorithm.csproj
+++ b/EvolutionaryAlgorithm/EvolutionaryAlgorithm/EvolutionaryAlgorithm.csproj
@@ -55,6 +55,11 @@
     </Compile>
     <Compile Include="drawings.Designer.cs">
       <DependentUpon>drawings.cs</DependentUpon>
+    <Compile Include="SimulatorGui.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SimulatorGui.Designer.cs">
+      <DependentUpon>SimulatorGui.cs</DependentUpon>
     </Compile>
     <Compile Include="Evaluators\AbstractFitnessEvaluator.cs" />
     <Compile Include="Evaluators\ColonelBlottoFitness.cs" />
@@ -62,6 +67,12 @@
     <Compile Include="Evaluators\MinCogFitness.cs" />
     <Compile Include="Evaluators\MinCogSimulator\MinCogAgent.cs" />
     <Compile Include="Evaluators\MinCogSimulator\MinCogSimulator.cs" />
+    <Compile Include="Evaluators\MinCogSimulator\MinCogAgent.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Compile>
+    <Compile Include="Evaluators\MinCogSimulator\MinCogSimulator.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Compile>
     <Compile Include="Evaluators\OneMaxFitness.cs" />
     <Compile Include="EvolutionaryAlgorithms\AbstractEA.cs" />
     <Compile Include="EvolutionaryAlgorithms\ColonelBlotto.cs" />
@@ -93,8 +104,8 @@
     <Compile Include="Selection Mechanisms\Rank.cs" />
     <Compile Include="Selection Mechanisms\SigmaScaling.cs" />
     <Compile Include="Selection Mechanisms\Tournament.cs" />
-    <EmbeddedResource Include="drawings.resx">
-      <DependentUpon>drawings.cs</DependentUpon>
+    <EmbeddedResource Include="SimulatorGui.resx">
+      <DependentUpon>SimulatorGui.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Gui.resx">
       <DependentUpon>Gui.cs</DependentUpon>
