--- a/EvolutionaryAlgorithm/EvolutionaryAlgorithm/EvolutionaryAlgorithm.csproj
+++ b/EvolutionaryAlgorithm/EvolutionaryAlgorithm/EvolutionaryAlgorithm.csproj
@@ -50,17 +50,11 @@
     <Compile Include="Developmental methods\IzhikevichTranslator.cs" />
     <Compile Include="Developmental methods\MinCogTranslator.cs" />
     <Compile Include="Developmental methods\OneMaxTranslator.cs" />
-    <Compile Include="Simulator1.cs">
+    <Compile Include="Simulator.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Simulator1.Designer.cs">
-      <DependentUpon>Simulator1.cs</DependentUpon>
-    </Compile>
-    <Compile Include="SimulatorGui.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="SimulatorGui.Designer.cs">
-      <DependentUpon>SimulatorGui.cs</DependentUpon>
+    <Compile Include="Simulator.Designer.cs">
+      <DependentUpon>Simulator.cs</DependentUpon>
     </Compile>
     <Compile Include="Evaluators\AbstractFitnessEvaluator.cs" />
     <Compile Include="Evaluators\ColonelBlottoFitness.cs" />
@@ -101,11 +95,8 @@
     <Compile Include="Selection Mechanisms\Rank.cs" />
     <Compile Include="Selection Mechanisms\SigmaScaling.cs" />
     <Compile Include="Selection Mechanisms\Tournament.cs" />
-    <EmbeddedResource Include="Simulator1.resx">
-      <DependentUpon>Simulator1.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="SimulatorGui.resx">
-      <DependentUpon>SimulatorGui.cs</DependentUpon>
+    <EmbeddedResource Include="Simulator.resx">
+      <DependentUpon>Simulator.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Gui.resx">
       <DependentUpon>Gui.cs</DependentUpon>
